--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ djangorestframework==3.3.3
 -e git+https://github.com/botswana-harvard/edc-consent@td-edc-consent#egg=edc_consent
 -e git+https://github.com/botswana-harvard/edc-constants@6a06b691a15894759e9a279892c0ba4961e9bed0#egg=edc_constants
 -e git+https://github.com/botswana-harvard/edc-content-type-map@7614883ed1e89eb5a90ee92df91746ae54965ec3#egg=edc_content_type_map
--e git+https://github.com/botswana-harvard/edc-dashboard@17f491b3206c162008b76f75a82e62b4d91e68da#egg=edc_dashboard
+-e git+https://github.com/botswana-harvard/edc-dashboard@td-edc-dashboard#egg=edc_dashboard
 -e git+https://github.com/botswana-harvard/edc-data-manager@td-edc-data-manager#egg=edc_data_manager
 -e git+https://github.com/botswana-harvard/edc-death-report@6ce18e5b6b4a2e99efef43eb0434ed44bd828461#egg=edc_death_report
 -e git+https://github.com/botswana-harvard/edc-device@e641387fbe9d672b73723e624105b503a907fd66#egg=edc_device
