--- a/requirements_protocol_changes.txt
+++ b/requirements_protocol_changes.txt
@@ -2,44 +2,44 @@ Django==1.9.2
 django-braces==1.8.1
 django-cors-headers==1.1.0
 django-crispy-forms==1.6.0
--e /Users/ckgathi/td_source/django-crypto-fields
+-e git+https://github.com/erikvw/django-crypto-fields@18b3b402fb3781bbd8c5da0e833aff19ae818303#egg=django_crypto_fields
 django-extensions==1.6.1
 django-js-reverse==0.7.2
 django-model-utils==2.5
--e /Users/ckgathi/td_source/django-revision
--e /Users/ckgathi/td_source/django-appconfig-ini
+git+https://github.com/erikvw/django-revision@97ebafb74f628af9913a1be33965cce104fe9300#egg=django_revision
+git+https://github.com/erikvw/django-appconfig-ini@develop#egg=django_appconfig_ini
 django-simple-history==1.8.1
 django-tastypie==0.13.3
 djangorestframework==3.3.3
--e /Users/ckgathi/td_source/edc-appointment
--e /Users/ckgathi/td_source/edc-base
--e /Users/ckgathi/td_source/edc-call-manager
--e /Users/ckgathi/td_source/edc-code-lists
--e /Users/ckgathi/td_source/edc-configuration
--e /Users/ckgathi/td_source/edc-consent
--e /Users/ckgathi/td_source/edc-constants
--e /Users/ckgathi/td_source/edc-content-type-map
--e /Users/ckgathi/td_source/edc-dashboard
--e /Users/ckgathi/td_source/edc-data-manager
--e /Users/ckgathi/td_source/edc-death-report
--e /Users/ckgathi/td_source/edc-device
--e /Users/ckgathi/td_source/edc-export
--e /Users/ckgathi/td_source/edc-identifier
--e /Users/ckgathi/td_source/edc-lab
--e /Users/ckgathi/td_source/edc-locator
--e /Users/ckgathi/td_source/edc-meta-data
--e /Users/ckgathi/td_source/edc-notification
--e /Users/ckgathi/td_source/edc-offstudy
--e /Users/ckgathi/td_source/edc-quota
--e /Users/ckgathi/td_source/edc-registration
--e /Users/ckgathi/td_source/edc-rest
--e /Users/ckgathi/td_source/edc-rule-groups
--e /Users/ckgathi/td_source/edc-sync-files
--e /Users/ckgathi/td_source/edc-sync
--e /Users/ckgathi/td_source/edc-templates
--e /Users/ckgathi/td_source/edc-testing
--e /Users/ckgathi/td_source/edc-visit-schedule
--e /Users/ckgathi/td_source/edc-visit-tracking
+-e git+https://github.com/botswana-harvard/edc-appointment@td-edc-appointment#egg=edc_appointment
+-e git+https://github.com/botswana-harvard/edc-base@c6f2c87a9a1090a97e7a7902fce288b25990ca50#egg=edc_base
+-e git+https://github.com/botswana-harvard/edc-call-manager@f70ed1fe60edecd683df2e2292471adf5ca3d20d#egg=edc_call_manager
+-e git+https://github.com/botswana-harvard/edc-code-lists@4984ef83aecb8dc7ec0428278a867dd38ce0cf68#egg=edc_code_lists
+-e git+https://github.com/botswana-harvard/edc-configuration@eb843e6b83e970c35bb4f6197deb3fd0cd0804d8#egg=edc_configuration
+-e git+https://github.com/botswana-harvard/edc-consent@td-edc-consent#egg=edc_consent
+-e git+https://github.com/botswana-harvard/edc-constants@6a06b691a15894759e9a279892c0ba4961e9bed0#egg=edc_constants
+-e git+https://github.com/botswana-harvard/edc-content-type-map@7614883ed1e89eb5a90ee92df91746ae54965ec3#egg=edc_content_type_map
+-e git+https://github.com/botswana-harvard/edc-dashboard@td-edc-dashboard#egg=edc_dashboard
+-e git+https://github.com/botswana-harvard/edc-data-manager@td-edc-data-manager#egg=edc_data_manager
+-e git+https://github.com/botswana-harvard/edc-death-report@6ce18e5b6b4a2e99efef43eb0434ed44bd828461#egg=edc_death_report
+-e git+https://github.com/botswana-harvard/edc-device@e641387fbe9d672b73723e624105b503a907fd66#egg=edc_device
+-e git+https://github.com/botswana-harvard/edc-export@aca36b5c147550194d1adcbd4bd0a92bc0a9ce6c#egg=edc_export
+-e git+https://github.com/botswana-harvard/edc-identifier@d5e030cd844f12a660f19e370e7d4044e4fe1b73#egg=edc_identifier
+-e git+https://github.com/botswana-harvard/edc-lab@96372724b8b0861ec67775b6799c15a363f4b0f4#egg=edc_lab
+-e git+https://github.com/botswana-harvard/edc-locator@2275ddff0c119a4666902d2fac0dba6159993bc0#egg=edc_locator
+-e git+https://github.com/botswana-harvard/edc-meta-data@fe3ee7f855aad41f68c60fc97b8a9b3713239847#egg=edc_meta_data
+-e git+https://github.com/botswana-harvard/edc-notification@7de21100ecccd46afd3fa3ea4d03390d2bab033c#egg=edc_notification
+-e git+https://github.com/botswana-harvard/edc-offstudy@td-edc-offstudy#egg=edc_offstudy
+-e git+https://github.com/botswana-harvard/edc-quota@7ea1d99ec2140428df38386434e3403cf44f464a#egg=edc_quota
+-e git+https://github.com/botswana-harvard/edc-registration@td-registered-subject#egg=edc_registration
+-e git+https://github.com/botswana-harvard/edc-rest@bcbf35de88a7c4d76e395d8b89b0c772dd1112b8#egg=edc_rest
+-e git+https://github.com/botswana-harvard/edc-rule-groups@a567afc226da0771e94015564d38fc845f81ddc0#egg=edc_rule_groups
+-e git+https://github.com/botswana-harvard/edc-sync-files@24c5cc971f82754ed2e39ee453d875dd0a3bb7f2#egg=edc_sync_files
+-e git+https://github.com/botswana-harvard/edc-sync@cce0ddf918df85e2d2add033188509e4ae0d8692#egg=edc_sync
+-e git+https://github.com/botswana-harvard/edc-templates@c79a1d3a541fed424451f6da455bce2b6c84e07c#egg=edc_templates
+-e git+https://github.com/botswana-harvard/edc-testing@d0444af275efc731e923b3239111e7a470802e42#egg=edc_testing
+-e git+https://github.com/botswana-harvard/edc-visit-schedule@td-edc-visit-schedule#egg=edc_visit_schedule
+-e git+https://github.com/botswana-harvard/edc-visit-tracking@td-edc-visit-tracking#egg=edc_visit_tracking
 factory-boy==2.6.1
 fake-factory==0.5.7
 flake8==2.5.4
@@ -47,14 +47,15 @@ geopy==1.11.0
 gitdb==0.6.4
 gitflow==0.5.1
 GitPython==2.0.5
--e /Users/ckgathi/td_source/lab-requisition
--e /Users/ckgathi/td_source/lis
+-e git+https://github.com/botswana-harvard/lab-requisition@e90bfd28465c10565edd3d37d15a91f39fe51f2e#egg=lab_requisition
+-e git+https://github.com/botswana-harvard/lis@27bbe0f73082adf7d35483cfc986c64e424c1a2d#egg=lis
 mccabe==0.4.0
 mysqlclient==1.3.7
 numpy==1.11.0
 pandas==0.18.1
 pbr==1.10.0
 pep8==1.7.0
+Pillow==3.2.0
 pycrypto==2.6.1
 pycups==1.9.73
 pyflakes==1.0.0
@@ -68,3 +69,7 @@ six==1.10.0
 smmap==0.9.0
 stevedore==1.15.0
 Unipath==1.1
+virtualenv==15.0.2
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
+hurry.filesize
