--- a/requirements_protocol_changes.txt
+++ b/requirements_protocol_changes.txt
@@ -27,7 +27,7 @@ djangorestframework==3.3.3
 -e git+https://github.com/botswana-harvard/edc-identifier@d5e030cd844f12a660f19e370e7d4044e4fe1b73#egg=edc_identifier
 -e git+https://github.com/botswana-harvard/edc-lab@96372724b8b0861ec67775b6799c15a363f4b0f4#egg=edc_lab
 -e git+https://github.com/botswana-harvard/edc-locator@2275ddff0c119a4666902d2fac0dba6159993bc0#egg=edc_locator
--e git+https://github.com/botswana-harvard/edc-meta-data@fe3ee7f855aad41f68c60fc97b8a9b3713239847#egg=edc_meta_data
+-e git+https://github.com/botswana-harvard/edc-meta-data@td-edc-metadata#egg=edc_meta_data
 -e git+https://github.com/botswana-harvard/edc-notification@7de21100ecccd46afd3fa3ea4d03390d2bab033c#egg=edc_notification
 -e git+https://github.com/botswana-harvard/edc-offstudy@td-edc-offstudy#egg=edc_offstudy
 -e git+https://github.com/botswana-harvard/edc-quota@7ea1d99ec2140428df38386434e3403cf44f464a#egg=edc_quota
