--- a/requirements_protocol_changes.txt
+++ b/requirements_protocol_changes.txt
@@ -48,7 +48,7 @@ gitdb==0.6.4
 gitflow==0.5.1
 GitPython==2.0.5
 -e git+https://github.com/botswana-harvard/lab-requisition@e90bfd28465c10565edd3d37d15a91f39fe51f2e#egg=lab_requisition
--e git+https://github.com/botswana-harvard/lis@27bbe0f73082adf7d35483cfc986c64e424c1a2d#egg=lis
+-e git+https://github.com/botswana-harvard/lis@td-lis#egg=lis
 mccabe==0.4.0
 mysqlclient==1.3.7
 numpy==1.11.0
