--- a/requirements_protocol_changes.txt
+++ b/requirements_protocol_changes.txt
@@ -23,7 +23,7 @@ djangorestframework==3.3.3
 -e git+https://github.com/botswana-harvard/edc-data-manager@td-edc-data-manager#egg=edc_data_manager
 -e git+https://github.com/botswana-harvard/edc-death-report@6ce18e5b6b4a2e99efef43eb0434ed44bd828461#egg=edc_death_report
 -e git+https://github.com/botswana-harvard/edc-device@e641387fbe9d672b73723e624105b503a907fd66#egg=edc_device
--e git+https://github.com/botswana-harvard/edc-export@aca36b5c147550194d1adcbd4bd0a92bc0a9ce6c#egg=edc_export
+-e git+https://github.com/botswana-harvard/edc-export@td-edc-export#egg=edc_export
 -e git+https://github.com/botswana-harvard/edc-identifier@d5e030cd844f12a660f19e370e7d4044e4fe1b73#egg=edc_identifier
 -e git+https://github.com/botswana-harvard/edc-lab@96372724b8b0861ec67775b6799c15a363f4b0f4#egg=edc_lab
 -e git+https://github.com/botswana-harvard/edc-locator@2275ddff0c119a4666902d2fac0dba6159993bc0#egg=edc_locator
