--- a/requirements_protocol_changes.txt
+++ b/requirements_protocol_changes.txt
@@ -18,7 +18,7 @@ djangorestframework==3.3.3
 -e git+https://github.com/botswana-harvard/edc-configuration@eb843e6b83e970c35bb4f6197deb3fd0cd0804d8#egg=edc_configuration
 -e git+https://github.com/botswana-harvard/edc-consent@td-edc-consent#egg=edc_consent
 -e git+https://github.com/botswana-harvard/edc-constants@6a06b691a15894759e9a279892c0ba4961e9bed0#egg=edc_constants
--e git+https://github.com/botswana-harvard/edc-content-type-map@7614883ed1e89eb5a90ee92df91746ae54965ec3#egg=edc_content_type_map
+-e git+https://github.com/botswana-harvard/edc-content-type-map@td-edc-content-type-map#egg=edc_content_type_map
 -e git+https://github.com/botswana-harvard/edc-dashboard@td-edc-dashboard#egg=edc_dashboard
 -e git+https://github.com/botswana-harvard/edc-data-manager@td-edc-data-manager#egg=edc_data_manager
 -e git+https://github.com/botswana-harvard/edc-death-report@6ce18e5b6b4a2e99efef43eb0434ed44bd828461#egg=edc_death_report
