--- a/requirements_protocol_changes.txt
+++ b/requirements_protocol_changes.txt
@@ -47,7 +47,7 @@ geopy==1.11.0
 gitdb==0.6.4
 gitflow==0.5.1
 GitPython==2.0.5
--e git+https://github.com/botswana-harvard/lab-requisition@e90bfd28465c10565edd3d37d15a91f39fe51f2e#egg=lab_requisition
+-e git+https://github.com/botswana-harvard/lab-requisition@td-lab-requisition#egg=lab_requisition
 -e git+https://github.com/botswana-harvard/lis@td-lis#egg=lis
 mccabe==0.4.0
 mysqlclient==1.3.7
